# PORTAL_2D_copy

./: CMakeLists.txt  LICENSE  README.md  informe.odt
client/: CMakeLists.txt  README.md  client.cpp  client.h  game.cpp  game.h  game_factory.cpp  main.cpp
client/assets/: all_blocks.txt  resources.qrc
client/includes/: render_time.h
client/includes/game/: client.h  game.h  game_config.h  game_factory.h
client/includes/game_objects/: game_objects_size.h
client/includes/mixer/: mix_chunck.h  mix_music.h  mixer.h  portal_mixer.h  sounds_path.h
client/includes/tests/: animation_tests_2.h
client/includes/textures/background_texture/: background_one_sprite.h
client/includes/textures/barrier_texture/: barrier_sprite.h
client/includes/textures/block_acid_texture/: block_acid_sprite.h
client/includes/textures/block_metal_texture/: block_metal_sprite.h  block_metal_sprite_strategy.h  block_metal_texture.h
client/includes/textures/block_rock_texture/: block_rock_sprite.h  block_rock_texture.h
client/includes/textures/button_texture/: button_pressed_sprite.h  button_sprite_strategy.h  button_unpressed_sprite.h
client/includes/textures/cake_texture/: cake_sprite.h  cake_texture.h
client/includes/textures/chell_texture/: chell_cake_sprite.h  chell_dead_strategy.h  chell_dying_sprite.h  chell_jump_apex_right_sprite.h  chell_jump_fall_right_sprite.h  chell_jump_rise_right_sprite.h  chell_point_right_sprite.h  chell_run_right_sprite.h  chell_sprite_strategy.h  chell_stand_right_sprite.h  chell_sweat_right_sprite.h  chell_texture.h  move_sense.h
client/includes/threads/: animation_loop_thread.h  blocking_queue_changes.h  event_game_processor.h  event_game_receiver_thread.h  game_proxy_thread.h  key_reader.h  key_reader_thread.h  key_sender_thread.h  play_result.h  playing_loop_thread.h  video_record_thread.h  video_recorder_thread.h
client/includes/user_interface/: game_over.h  line_interface.h  login.h  login_join.h  login_mode.h  login_new.h  login_server.h  message_exception.h  ui_login_fwd.h
client/includes/window/: map_creator.h  map_creator_not_use.h  os_exception.h  texture_factory.h  window.h
client/src/: animation_tests.cpp  animation_tests.h  area.cpp  area.h  big_texture.cpp  big_texture.h  chell_jump_apex_right_sprite.cpp  chell_jump_apex_right_sprite.h  chell_jump_fall_right_sprite.cpp  chell_jump_fall_right_sprite.h  chell_jump_rise_right_sprite.cpp  chell_jump_rise_right_sprite.h  chell_run_right_sprite.cpp  chell_run_right_sprite.h  chell_running_sprite.cpp  chell_running_sprite.h  chell_sprite_state.cpp  chell_sprite_state.h  chell_sprite_strategy.cpp  chell_sprite_strategy.h  chell_sweat_right_sprite.cpp  chell_sweat_right_sprite.h  chell_sweat_sprite.cpp  chell_sweat_sprite.h  chell_texture.cpp  chell_texture.h  client.cpp  client.h  dynamic_sprite.cpp  dynamic_sprite.h  game.cpp  game.h  game_factory.cpp  game_factory.h  images_paths.h  move_sense.cpp  move_sense.h  os_exception.cpp  os_exception.h  sdl_exception.cpp  (+7 more)
client/src/chell_texture/: chell_texture.cpp  chell_texture.h  move_sense.cpp  move_sense.h
client/src/common_texture/: area.cpp  area.h  big_texture.cpp  big_texture.h  dynamic_sprite.h  images_paths.h  renderizable.h  sdl_exception.cpp  sprite_strategy.cpp  sprite_strategy.h  texture.cpp  texture.h  texture_move_change.cpp  texture_move_change.h
client/src/exclusive_queues/: thread_safe_queue_texture.cpp
client/src/game/: client.cpp  game.cpp  game_config.cpp  game_factory.cpp
client/src/mixer/: mix_chunck.cpp  mix_chunck.h  mix_music.cpp  mixer.cpp  mixer.h  portal_mixer.cpp  sdl_system.cpp  sdl_system.h
client/src/record/: FormatContext.cpp  FormatContext.h  OutputFormat.cpp  OutputFormat.h  codec_context_wrapper.cpp  format_context.cpp  output_format.cpp  sws_context_wrapper.cpp
client/src/static_texture/: static_texture.cpp
client/src/tests/: animation_tests.cpp  animation_tests.h  animation_tests_2.cpp
client/src/threads/: animation_loop_thread.cpp  animation_loop_thread.h  blocking_queue_changes.cpp  blocking_queue_changes.h  cosas_para_hacer  event_game_processor.cpp  event_game_receiver_thread.cpp  game_object_action.h  game_proxy_thread.cpp  game_proxy_thread.h  key_reader.cpp  key_reader_thread.cpp  key_reader_thread.h  key_sender_thread.cpp  play_result.cpp  playing_loop_thread.cpp  queue_changes.h  video_record_thread.cpp
client/src/user_interface/: Login.ui  LoginJoin.ui  LoginServer.ui  game_over.cpp  line_interface.cpp  login.cpp  login_join.cpp  login_mode.cpp  login_new.cpp  login_server.cpp  message_exception.cpp  new_join_game.cpp
client/src/window/: map_creator.cpp  map_creator_not_use.cpp  os_exception.cpp  texture_factory.cpp  window.cpp  window.h
common/: CMakeLists.txt  blocking_queue.cpp  blocking_queue.h  connector.cpp  connector.h  game_action.cpp  game_action.h  object_move_change.cpp  object_move_change.h  portal_exception.cpp  portal_exception.h  protocol_code.h  thread.cpp  thread.h  thread_safe_bool.cpp  thread_safe_bool.h  thread_safe_queue.cpp  thread_safe_queue.h
common/configs_yaml/: config_0.yaml  config_1.yaml  config_2.yaml  config_3.yaml  config_paths.h
common/connector/: connector.cpp  connector.h  socket.cpp  socket.h  socket_exception.cpp  socket_exception.h
common/protocol/: event.h  object_moves_event.cpp  object_moves_event.h  player_wins_event.h  protocol_code.h
common/protocol/event/: event.cpp  event.h  game_ends_event.cpp  game_ends_event.h  game_starts_event.cpp  game_starts_event.h  grab_rock_event.cpp  grab_rock_event.h  object_moves_event.cpp  object_moves_event.h  object_switch_event.cpp  object_switch_event.h  player_dies_event.cpp  player_dies_event.h  player_loses_event.cpp  player_loses_event.h  player_reach_cake_event.cpp  player_reach_cake_event.h  player_wins_event.cpp  player_wins_event.h  portal_moves_event.cpp  portal_moves_event.h  throw_rock_event.cpp  throw_rock_event.h
common/protocol/game_action/: coords_action.cpp  coords_action.h  game_action.cpp  game_action.h  open_portal_action.cpp  open_portal_action.h
server/: game.cpp  (+18 more)
(+426 files in other folders)
